# GenMR_SCOR

./: .gitignore  README.md  pyproject.toml
GenMR/: README.md  __init__.py  dynamics.py  environment.py  perils.py  utils.py
GenMR.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: .buildinfo  genindex.html  index.html  manual.html  objects.inv  py-modindex.html  rationale.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  manual.doctree  rationale.doctree
docs/.doctrees/notebooks/: Tutorial1_DigitalTemplate_environment.doctree  Tutorial2_DigitalTemplate_perils.doctree  Tutorial3_DigitalTemplate_dynamics.doctree
docs/_sources/: index.md.txt  manual.md.txt  rationale.md.txt
docs/_sources/notebooks/: Tutorial1_DigitalTemplate_environment.ipynb.txt  Tutorial2_DigitalTemplate_perils.ipynb.txt
docs/notebooks/: Tutorial1_DigitalTemplate_environment.html  Tutorial2_DigitalTemplate_perils.html  Tutorial3_DigitalTemplate_dynamics.html
docs/source/: conf.py  index.md  manual.md  rationale.md  refs.bib
docs/source/notebooks/: Tutorial1_DigitalTemplate_environment.ipynb  Tutorial2_DigitalTemplate_perils.ipynb  Tutorial3_DigitalTemplate_dynamics.ipynb  Untitled.ipynb
docs/source/notebooks/.ipynb_checkpoints/: Tutorial1_DigitalTemplate_environment-checkpoint.ipynb  Tutorial2_DigitalTemplate_perils-checkpoint.ipynb  Tutorial3_DigitalTemplate_dynamics-checkpoint.ipynb  Untitled-checkpoint.ipynb
jupyter_execute/notebooks/: Tutorial1_DigitalTemplate_environment.ipynb  Tutorial2_DigitalTemplate_perils.ipynb
(+19 files in other folders)
