[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GenMR"
version = "1.1.1"
authors = [{name = "Arnaud Mignan", email = "arnaud@mignanriskanalytics.com"}]
description = ""
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies.dev]
dev = [
    "myst-parser>=3.0.1",
    "myst-nb>=1.1.1",
    "jupyter>=1.0.0",
    "sphinx>=7.0",
]